# topling-ark

./: .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT  Doxyfile  LICENSE  Makefile  README.md  README.very.old.version  ali_pkg.sh  alldeploy.sh  build-boost.bat  build_for_ci.sh  cpu_has_bmi2.sh  deploy.sh  extract-terark-subset.sh  gen_env_conf.sh  get-compiler-name.sh  mybuild.sh  sed-gen-valvec32.bash  zdsed.sh
discard/mapreduce/: Makefile
doc/: dfa_intersection.h.pseudo  febird-lib.doc  mpool.doc  multi_thread_pipeline_cn.pptx  multi_thread_pipeline_en.pptx  trbstrmap.doc
doc-md/: nest_louds_trie.md
key/: private.txt  public.txt  seed.txt
mongo-terark/: .arcconfig  SConscript  build.py
mongo-terark/src/: index_key.cpp  index_key.h  record_codec.cpp  record_codec.h  terark_btree_impl.cpp  terark_btree_impl.h  terark_engine.cpp  terark_engine.h  terark_init.cpp  terark_readonly_record_store.cpp  terark_readonly_record_store.h  terark_recovery_unit.cpp  terark_recovery_unit.h  terark_writting_record_store.cpp  terark_writting_record_store.h
mongo-terark/wiredtiger-perf/: Makefile  benchmark.cpp
nlp/data/: cjk-convert.sh  conv-29591.pl  conv-all.sh  find-duoyin-words.pl  pinyin_hanzi-to-hanzi_pinyin.pl  trans_pinyin.pl  trans_pinyin.sed  unibase-conv.cpp
nlp/sougou/: scel-to-text.py
obsoleted/: add_null_flag.hpp
obsoleted/obsoleted/: DoubleHeadList.hpp  HeavyObjectPool.hpp  MruCache.hpp  ObjectHolder.hpp  SmallArray.hpp  bitvector.cpp  bitvector.hpp  const_string.hpp  load_save_file.hpp  load_save_file_iterator.hpp  malloc_alloc.hpp  rb_tree.cpp  rb_tree.hpp  shadow_vector.hpp  sort3.hpp  string_compare.hpp  suffix_tree.cpp  suffix_tree.hpp
samples/dataio/: main.cpp
samples/fcgi/: Makefile  log_search.cpp  match_pinyin.cpp  search.cpp
samples/re2bench/: Makefile  setmatch.cpp
samples/rpc/: Makefile  employee.h
src/terark/: bitfield_array.hpp  bitmanip.hpp  bitmap.cpp  bitmap.hpp  bits_rotate.hpp  circular_queue.hpp  config.hpp  cxx_features.hpp  easy_use_hash_map.hpp  fixed_circular_queue.hpp  fstring.cpp  fstring.hpp  gold_hash_idx.hpp  gold_hash_map.hpp  gold_hash_map_iterator.hpp  hash_common.cpp  hash_common.hpp  hash_strmap.hpp  hash_strmap_iterator.hpp  histogram.cpp  histogram.hpp  int_vector.cpp  int_vector.hpp  json.hpp  json_fwd.hpp  lcast.cpp  lcast.hpp  logged_tab.hpp  lru_map.cpp  lru_map.hpp  mempool.hpp  mempool_fixed_cap.hpp  mempool_lock_free.hpp  mempool_lock_mutex.hpp  mempool_lock_none.hpp  mempool_thread_cache.cpp  mempool_thread_cache.hpp  mmap_vec.hpp  mpoolxx.hpp  node_layout.hpp  (+23 more)
test/bitfield_array/: Makefile  bitfield_array_benchmark.cpp  bitfield_array_test.cpp  compile_fail1.cpp
test/fsa/: Makefile
test/linebuf/: Makefile  bench_linebuf.cpp  test_input.txt  test_linebuf.cpp
test/many/: Makefile  MemStream_printf.cpp  align_pow2.cpp  loser_tree.cpp  lru_page_cache_test.cpp  memcmp_coding_test.cpp  oldsuffixtree.cpp.bak  popcnt_test.cpp  radix_sort_test.cpp  sais_prototype.cpp  (+5 more)
tools/: call.sh  ldlib.sh
vcproj/: vcproj.vc2008.sln  vcproj.vc2010.sln
vs2015/: rocksdb.natvis  terark.natvis
(+1165 files in other folders)
